# whr

./: .gitignore  CMakeLists.txt  LLM_WHR_MMO_INTEGRATION.md  README.md  build_recalc_release.bat  package.json  start_admin_services.bat
admin/: API_FOR_LLM.md
admin/backend/: package-lock.json  package.json
admin/backend/src/: app.ts  config.ts  recalc-runner.ts  repository.ts  server.ts  smoke.ts  types.ts
admin/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
admin/frontend/src/: App.tsx  api.ts  index.css  styles.css  types.ts
admin/frontend/src/api/: client.ts
admin/frontend/src/components/: Layout.tsx  MatchCard.tsx  Pagination.tsx  RankTierBadge.tsx  RatingChart.tsx
admin/frontend/src/pages/: Admin.tsx  AdminPage.tsx  Dashboard.tsx  DashboardPage.tsx  Matches.tsx  MatchesPage.tsx  PlayerProfile.tsx  PlayerProfilePage.tsx  Players.tsx  PlayersPage.tsx
admin/frontend/src/types/: index.ts
admin/frontend/src/utils/: rankTier.ts
apps/common/: data_store.hpp
apps/debug_duel/: main.cpp
apps/recalc/: main.cpp
apps/simulate/: main.cpp
include/whr/: all.hpp  config.hpp  engine.hpp  interpolation.hpp  match.hpp  matchmaking.hpp  math.hpp  newton_player_update.hpp  player_history.hpp  strength_model.hpp  three_player_debug.hpp  tridiagonal.hpp  two_player_debug.hpp  types.hpp
tests/: test_engine.cpp  test_incremental_performance.cpp  test_interpolation.cpp  test_likelihood_terms.cpp  test_match.cpp  test_matchmaking.cpp  test_math.cpp  test_player_history.cpp  test_tridiagonal.cpp  test_utils.hpp
